--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,10 +41,10 @@ dependencies {
   implementation 'androidx.core:core-ktx:1.0.2'
   implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
 
-  implementation 'androidx.room:room-runtime:2.2.0'
-  implementation "androidx.room:room-ktx:2.2.0"
+  implementation 'androidx.room:room-runtime:2.4.2'
+  implementation "androidx.room:room-ktx:2.4.2"
 
-  annotationProcessor "androidx.room:room-compiler:2.2.0"
+  kapt  "androidx.room:room-compiler:2.4.2"
 
   implementation 'com.github.chrisbanes:PhotoView:2.3.0'
   implementation 'com.github.bumptech.glide:glide:4.9.0'
